# ai-platform-engineer

./: .dockerignore  .gitignore  .hadolint.yaml  README.md  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: lewisbuilds-python.instructions.md
.github/prompts/: create-github-pull-request-from-specification.prompt.md
.github/workflows/: pr-container-intelligence.yml
agents/: container-review.agent.md
docs/: architecture.md  copilot-customizations.md  development.md
examples/dockerfiles/: minimal-secure.Dockerfile
examples/reports/: sample-pr-report.md
instructions/: container-engineering-standards.instructions.md
skills/container-analysis/: SKILL.md
skills/container-analysis-execution/: LICENSE.txt  SKILL.md
skills/container-analysis-execution/references/: workflow.md
src/ai_container_intelligence/: __init__.py  pipeline.py
src/ai_container_intelligence/analysis/: __init__.py  (+1 more)
tests/: conftest.py
tests/integration/: test_cli_local.py
tests/unit/: test_detection_corpus_governance.py  test_detection_golden_corpus.py  test_detection_known_blind_spots.py  test_dockerfile_review.py  test_integration_interfaces.py  test_markdown_report.py  test_parser_accuracy_metric.py  test_pipeline.py  test_policy_evaluator.py  test_provider_selection.py  test_repository_compliance.py  test_syft_sbom_provider.py  test_tar_layer_provider.py  test_trivy_vuln_provider.py
tmp-policy-gate/: Dockerfile.root  Dockerfile.root.nobom  report.md  report.nobom.md
(+24 files in other folders)
