[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-container-intelligence"
version = "0.1.0"
description = "Local-first AI container analysis scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aci = "ai_container_intelligence.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["ai_container_intelligence"]
src_paths = ["src"]
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
